[gd_scene load_steps=9 format=3 uid="uid://blruu7c7gkkic"]

[ext_resource type="Script" uid="uid://rlx6j86s1sjl" path="res://title screen/script/title_screen.gd" id="1_ga4s4"]
[ext_resource type="Texture2D" uid="uid://ciwichrk03do1" path="res://backgrounds/title screen.jpg" id="1_h5j72"]
[ext_resource type="Theme" uid="uid://b021q03twr53q" path="res://title screen/theme buttons/new_theme.tres" id="2_3a0uj"]
[ext_resource type="Texture2D" uid="uid://clt3batbuqat3" path="res://backgrounds/title screen black.png" id="3_1afan"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2uiy3"]

[sub_resource type="Animation" id="Animation_wbl1j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-400, -351)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 297.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7rhec"]
resource_name = "fade in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 3.5),
"transitions": PackedFloat32Array(0.392293, 0.392293),
"update": 0,
"values": [Vector2(-400, -358.455), Vector2(88, -351)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MarginContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3.5, 5),
"transitions": PackedFloat32Array(0.210229, 0.210229),
"update": 0,
"values": [Vector2(-250, 297.5), Vector2(0, 297.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3.5, 5),
"transitions": PackedFloat32Array(3.4822, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkn5j"]
_data = {
&"RESET": SubResource("Animation_wbl1j"),
&"fade in": SubResource("Animation_7rhec")
}

[node name="title screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ga4s4")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -6.0
offset_right = 88.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h5j72")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -351.0
offset_right = -488.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1afan")
expand_mode = 4
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -62.5
offset_right = 117.0
offset_bottom = 62.5
grow_vertical = 2
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(-13.385, 62.48)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="jogar" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3a0uj")
text = "JOGAR"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_2uiy3")

[node name="opções" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3a0uj")
text = "OPÇÕES"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_2uiy3")

[node name="créditos" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3a0uj")
text = "CRÉDITOS"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_2uiy3")

[node name="sair do jogo" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_3a0uj")
text = "SAIR DO JOGO"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../bg")
libraries = {
&"": SubResource("AnimationLibrary_xkn5j")
}
autoplay = "fade in"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/sair do jogo" to="." method="_on_sair_do_jogo_pressed"]
